# maph

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLEAN_PERFECT_HASHING_SUMMARY.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  Doxyfile.in  GEMINI.md  OPTIMIZATION_SUMMARY.md  README.md  maph  pyproject.toml  setup.py  test_build.sh  test_cli.sh
.github/: settings.yml
.github/workflows/: docs.yml
archive/: README.md
archive/include/: maph_v2.hpp
archive/include/maph/: perfect_hash_simple_openmp.hpp
archive/integrations/rest_api/: maph_server_v2.cpp
archive/src/: perfect_hash.cpp
archive/tests/: bench_ultra_hash.cpp  test_dual_mode.cpp  test_perfect_hash.cpp  test_perfect_hash_comprehensive.cpp
benchmarks/: CMakeLists.txt  README.md  bench_all.cpp  bench_approximate_map.cpp  bench_bloomier.cpp  bench_codec_uniformity.cpp  bench_comparison.cpp  bench_filter.cpp  bench_harness.hpp  bench_latency.cpp  bench_membership.cpp  bench_partitioned_algos.cpp  bench_partitioned_sweep.cpp  bench_perfect_hash.cpp  bench_perfect_hash_compare.cpp  bench_phf.cpp  bench_phf_sweep.cpp  bench_phobic.cpp  bench_phobic_parallel.cpp  bench_retrieval.cpp  bench_scale.cpp  bench_throughput.cpp  bench_ycsb.cpp  benchmark_utils.hpp
cmake/: rd_ph_filterConfig.cmake.in
docs/: API.md  ARCHITECTURE.md  BENCHMARK_RESULTS.md  CLEANUP_SUMMARY.md  CLI.md  CODESPACE_NONMEMBERS.md  OPTIMIZATION_NOTES.md  PAPER_CHANGES_SUMMARY.md  PERFECT_HASH_DESIGN.md  PERFECT_HASH_IMPLEMENTATION.md  REFACTORING_SUMMARY.md  TDD_REVIEW_REPORT.md  TECHNICAL_REPORT_README.md  USER_GUIDE.md  VERSION_HISTORY.md  _config.yml  build_docs.sh  index.md  maph_technical_report.tex
docs/author_materials/: README.md  abstract_variations.md  author_biographies.md  cover_letters.md  social_media_kit.md  submission_checklist.md
docs/doxygen/html/: annotated.html  annotated_dup.js  classes.html  dir_000006_000011.html  dir_000008_000016.html  dir_000011_000014.html  dir_000015_000009.html  dir_000016_000011.html  dir_000017_000009.html  dir_156838deca9634111d80484eaf11fa2a.html  dir_156838deca9634111d80484eaf11fa2a.js  dir_156838deca9634111d80484eaf11fa2a_dep.map  dir_156838deca9634111d80484eaf11fa2a_dep.md5  dir_17123399e7a17e3abf341ab4b8a141b1.html  dir_17123399e7a17e3abf341ab4b8a141b1.js  dir_17123399e7a17e3abf341ab4b8a141b1_dep.map  dir_17123399e7a17e3abf341ab4b8a141b1_dep.md5  dir_1e914bda5034d103c0b37412cb5fd1f1.html  dir_1e914bda5034d103c0b37412cb5fd1f1_dep.map  dir_1e914bda5034d103c0b37412cb5fd1f1_dep.md5  dir_3c99cc987defe9d430022d89facfdea0.html  dir_3c99cc987defe9d430022d89facfdea0.js  dir_3c99cc987defe9d430022d89facfdea0_dep.map  dir_3c99cc987defe9d430022d89facfdea0_dep.md5  dir_453d02c5b8c8e2d32e524b95732bc49b.html  dir_453d02c5b8c8e2d32e524b95732bc49b.js  dir_453d02c5b8c8e2d32e524b95732bc49b_dep.map  dir_453d02c5b8c8e2d32e524b95732bc49b_dep.md5  dir_4558f65c9da66379329fd1c523348410.html  dir_4558f65c9da66379329fd1c523348410.js  dir_4558f65c9da66379329fd1c523348410_dep.map  dir_4558f65c9da66379329fd1c523348410_dep.md5  dir_49e56c817e5e54854c35e136979f97ca.html  dir_4cad7c6c499ced353479707128856662.html  dir_4cad7c6c499ced353479707128856662.js  dir_4cad7c6c499ced353479707128856662_dep.map  dir_4cad7c6c499ced353479707128856662_dep.md5  dir_5be12b9c15b7b924df1b87e9d63e9525.html  dir_5be12b9c15b7b924df1b87e9d63e9525.js  dir_5be12b9c15b7b924df1b87e9d63e9525_dep.map  (+284 more)
docs/html_paper/: index.html
docs/submissions/: MASTER_SUBMISSION_GUIDE.md  submission_status.json
docs/submissions/arxiv_2025/: SUBMISSION_CHECKLIST.md  abstract.txt  compile.sh  maph_arxiv.tex
docs/submissions/corr_2025/: SUBMISSION_NOTES.md
docs/submissions/usenix_login_2025/: SUBMISSION_CHECKLIST.md  cover_letter.txt  maph_login_article.tex
docs/superpowers/plans/: 2026-03-30-membership-verification-strategies.md  2026-03-31-phf-concept-migration.md  2026-03-31-phobic-perfect-filter.md
docs/superpowers/specs/: 2026-03-30-membership-verification-strategies-design.md  (+2 more)
examples/: approximate_map_examples.cpp  hybrid_architecture_demo.cpp  lazy_iterator_examples.cpp  speed_demo.cpp  speed_demo_optimized.cpp  v3_demo.cpp  v3_simple_test.cpp
include/: maph.hpp
include/maph/: core.hpp  hashers.hpp  hashers_perfect.hpp  maph.hpp  maph_openmp.hpp  membership.hpp  optimization.hpp  perfect_filter.hpp  perfect_hash.hpp  perfect_hash_ultra.hpp  phf_concept.hpp  phobic.hpp  storage.hpp  table.hpp
include/maph/detail/: hash.hpp  (+4 more)
include/rd_ph_filter/: approximate_map.hpp  builder.hpp  lazy_iterators.hpp  rd_ph_filter.hpp
integrations/rest_api/: API.md  CMakeLists.txt  HYBRID_ARCHITECTURE.md  MULTI_WRITER.md  PERFECT_HASH.md  README.md  index.html  maph_server_simple.cpp  maph_server_v3.cpp  minimal_server.cpp  simple_maph_server.cpp
integrations/rest_api/python/: README.md  setup.py  test_client.py
integrations/rest_api/python/examples/: basic_usage.py  batch_operations.py  json_storage.py  perfect_hash_optimization.py
integrations/rest_api/python/maph_client/: __init__.py  client.py
python/: CMakeLists.txt
python/examples/: advanced_usage.py  demo_approximate_filters.py  real_world_applications.py
python/src/: bindings.cpp  bindings_v2.cpp  ph_wrapper.hpp
python/tests/: test_approximate_filters.py  test_filter.py
src/: maph_cli.cpp  maph_cli_v2.cpp
tests/: CMakeLists.txt  DartConfiguration.tcl  bench_maph.cpp  run_test_suite.sh  test_approximate_map.cpp  test_benchmark_performance.cpp  test_builder.cpp  test_lazy_iterators.cpp  test_main.cpp  test_maph.cpp  test_mock_ph.hpp  test_rd_ph_filter.cpp  test_rest_api_interop.cpp  test_simple_openmp.cpp
tests/v3/: CMakeLists.txt  run_coverage.sh  simple_test.cpp  test_binary_fuse.cpp  test_bloomier.cpp  test_core.cpp  test_encoded_retrieval.cpp  test_hashers.cpp  test_integration.cpp  test_membership.cpp  test_padded_phf.cpp  test_partitioned.cpp  test_perfect_filter.cpp  test_perfect_hash.cpp  test_perfect_hash_extended.cpp  test_phf_concept.cpp  test_phobic.cpp  test_prefix_codec.cpp  test_properties.cpp  test_retrieval.cpp  test_shock_hash.cpp  test_storage.cpp  test_table.cpp
(+1503 files in other folders)
