[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "pybind11>=2.10.0",
    "cmake>=3.14"
]
build-backend = "setuptools.build_meta"

[project]
name = "rd-ph-filter"
version = "1.0.0"
authors = [
    {name = "RD PH Filter Contributors"},
]
description = "Rate-distorted perfect hash filter for efficient probabilistic set membership"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering",
]
keywords = ["hash", "filter", "probabilistic", "data structure", "membership"]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "flake8>=5.0",
    "mypy>=0.991",
]

test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "numpy>=1.21",
]

docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
    "breathe>=4.34",
]

[project.urls]
"Homepage" = "https://github.com/username/rd_ph_filter"
"Bug Tracker" = "https://github.com/username/rd_ph_filter/issues"
"Documentation" = "https://rd-ph-filter.readthedocs.io"

[tool.setuptools]
packages = ["rd_ph_filter"]
package-dir = {"" = "python"}

[tool.setuptools.package-data]
rd_ph_filter = ["*.pyi", "py.typed"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true